--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"dev:h5": "npm run build:h5 -- --watch",
 		"dev:rn": "npm run build:rn -- --watch",
 		"dev:qq": "npm run build:qq -- --watch",
-		"dev:quickapp": "npm run build:quickapp -- --watch"
+		"dev:quickapp": "npm run build:quickapp -- --watch",
+		"prettify": "yarn prettier --no-semi --single-quote --jsx-single-quote --tab-width 2 --trailing-comma none --arrow-parens avoid --write  src/"
 	},
 	"author": "",
 	"license": "MIT",
@@ -65,6 +66,7 @@
 		"eslint-plugin-react": "^7.8.2",
 		"eslint-plugin-react-hooks": "^1.6.1",
 		"eslint-plugin-taro": "2.2.7",
+		"prettier": "2.0.5",
 		"stylelint": "9.3.0",
 		"stylelint-config-taro-rn": "2.2.7",
 		"stylelint-taro-rn": "2.2.7"
