--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
 		"css": "sass"
 	},
 	"scripts": {
-		"build:weapp": "taro build --type weapp",
-		"build:swan": "taro build --type swan",
-		"build:alipay": "taro build --type alipay",
-		"build:tt": "taro build --type tt",
-		"build:h5": "taro build --type h5",
-		"build:rn": "taro build --type rn",
-		"build:qq": "taro build --type qq",
-		"build:quickapp": "taro build --type quickapp",
+		"build:weapp": "npx @tarojs/cli@2.2.7 build --type weapp",
+		"build:swan": "npx @tarojs/cli@2.2.7 build --type swan",
+		"build:alipay": "npx @tarojs/cli@2.2.7 build --type alipay",
+		"build:tt": "npx @tarojs/cli@2.2.7 build --type tt",
+		"build:h5": "npx @tarojs/cli@2.2.7 build --type h5",
+		"build:rn": "npx @tarojs/cli@2.2.7 build --type rn",
+		"build:qq": "npx @tarojs/cli@2.2.7 build --type qq",
+		"build:quickapp": "npx @tarojs/cli@2.2.7 build --type quickapp",
 		"dev:weapp": "npm run build:weapp -- --watch",
 		"dev:swan": "npm run build:swan -- --watch",
 		"dev:alipay": "npm run build:alipay -- --watch",
