--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
 		"leancloud-storage": "^4.6.1",
 		"nerv-devtools": "^1.5.7",
 		"nervjs": "^1.5.7",
-		"regenerator-runtime": "0.11.1"
+		"regenerator-runtime": "0.11.1",
+		"taro-ui": "^2.3.4"
 	},
 	"devDependencies": {
 		"@tarojs/mini-runner": "2.2.7",
