--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "tb-soft-smart-service",
 	"version": "1.0.1",
 	"private": true,
-	"description": "九桥同步智能客服",
+	"description": "九桥小助手",
 	"templateInfo": {
 		"name": "default",
 		"typescript": false,
