--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"nervjs": "^1.5.7",
 		"redux": "^4.0.5",
 		"redux-logger": "^3.0.6",
+		"redux-persist": "^4.0.0",
 		"regenerator-runtime": "0.11.1",
 		"taro-ui": "^2.3.4"
 	},
